finished navbar,editing hero content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="header">
+        <div class="left-links">
+            <ul class="lefterinos">
+                <li>Header</li>
+                <li>Logo</li>
+            </ul>
+        </div>
+        <div class="right-links">
+            <ul class="righterinos">
+                <li>link-one</li>
+                <li>link-two</li>
+                <li>link-three</li>
+            </ul>
+        </div>
+    </div>
+    <div class="herocontent">
+        <h2 class="hero-main">This website is awesome!</h2>
+        <h4 class="hero-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, non!</h4>
+        <button class="hero-button">Sign up</button>
+        <div class="heroimage">
+            <img class="heroimage" src="/landingpage/landingpage_odin/img/placeholder.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
