--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="left-links">
-            <ul class="lefterinos">
-                <li>Header</li>
-                <li>Logo</li>
-            </ul>
-        </div>
-        <div class="right-links">
-            <ul class="righterinos">
-                <li>link-one</li>
-                <li>link-two</li>
-                <li>link-three</li>
-            </ul>
-        </div>
-    </div>
-    <div class="herocontent">
-        <h2 class="hero-main">This website is awesome!</h2>
-        <h4 class="hero-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, non!</h4>
-        <button class="hero-button">Sign up</button>
-        <div class="heroimage">
-            <img class="heroimage" src="/landingpage/landingpage_odin/img/placeholder.png" alt="">
-        </div>
-    </div>
+    <!-- Hero and Navbar -->
+    <div class="hero">
+        <div class="nav">
+            <div class="header-logo"><h1>Header Logo</h1></div>
+                <div class="header-links">
+                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">About</a>
+                </div>
+        </div> <!-- Ovdi zavrsava Navbar -->
+        <div class="hero-main-content"> <!-- Ovdje pocinje content za Hero -->
+            <div class="heroinfo">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus officiis quo odio veniam ad aut.</p>
+                <button>Sign up</button>
+            </div><!-- Ovdje zavrsava hero info txt -->
+                <img src="/landingpage/landingpage_odin/img/placeholder.png" alt="">
+        </div><!-- Ovdje zavrsava hero content -->
+    </div><!-- Ovdje zavrsava main -- hero i navbar -->
     
 </body>
 </html>
