finished hero tab and navbar

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <div class="heroinfo">
                 <h1>This website is awesome</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus officiis quo odio veniam ad aut.</p>
-                <button>Sign up</button>
+                <button class="botuncic">Sign up</button>
             </div><!-- Ovdje zavrsava hero info txt -->
                 <img src="/landingpage/landingpage_odin/img/placeholder.png" alt="">
         </div><!-- Ovdje zavrsava hero content -->
     </div><!-- Ovdje zavrsava main -- hero i navbar -->
+    <!-- Information -->
+    
     
 </body>
 </html>
