added images,finished product info tab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
         </div><!-- Ovdje zavrsava hero content -->
     </div><!-- Ovdje zavrsava main -- hero i navbar -->
     <!-- Information -->
-    
+    <div class="infotab">
+        <div class="info-heading">
+            <h1>Some Random Information</h1>
+        </div>
+        <div class="info-container">
+            <div class="product-info">
+                <img src="/landingpage/landingpage_odin/img/squaat.png" alt="" width="150" height="150">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
+            </div>
+            <div class="product-info">
+                <img src="/landingpage/landingpage_odin/img/benchh.png" alt="" width="150" height="150">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
+            </div>
+            <div class="product-info">
+                <img src="/landingpage/landingpage_odin/img/deaddlift.webp" alt="" width="150" height="150">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
+            </div>
+        </div><!-- Ovdje zavrsava info-container -->
+    </div><!-- Ovdje zavrsava infotab -->
     
 </body>
 </html>
