--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             </div>
         </div><!-- Ovdje zavrsava info-container -->
     </div><!-- Ovdje zavrsava infotab -->
+    <!-- Quote -->
+    <div class="quote-container">
+        <blockquote class="blockquote">
+            <p class="blockquote-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eligendi expedita accusantium accusamus consectetur ea alias ad hic, sint ab.</p>
+            <p class="blockquote-autor">Rino,Dev of Devs</p>
+        </blockquote>
+    </div><!-- Ovdje zavrsava quote dio -->
     
 </body>
 </html>
