--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
             <p class="blockquote-autor">Rino,Dev of Devs</p>
         </blockquote>
     </div><!-- Ovdje zavrsava quote dio -->
+    <!-- Sign up -->
+    <div class="sign-up-container">
+        <div class="sign-up">
+            <div class="sign-up-text">
+                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, eius!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error optio quam tenetur amet nostrum doloremque! Animi consectetur voluptates incidunt qui.</p>
+            </div>
+            <div class="sign-up-button">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div><!-- Ovdje zavrsava sign up container -->
+    
     
 </body>
 </html>
