fixed images directory

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus officiis quo odio veniam ad aut.</p>
                 <button class="botuncic">Sign up</button>
             </div><!-- Ovdje zavrsava hero info txt -->
-                <img src="/landingpage/landingpage_odin/img/placeholder.png" alt="">
+                <img src="img/placeholder.png" alt="">
         </div><!-- Ovdje zavrsava hero content -->
     </div><!-- Ovdje zavrsava main -- hero i navbar -->
     <!-- Information -->
@@ -34,15 +34,15 @@
         </div>
         <div class="info-container">
             <div class="product-info">
-                <img src="/landingpage/landingpage_odin/img/squaat.png" alt="" width="150" height="150">
+                <img src="img/squaat.png" alt="" width="150" height="150">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
             </div>
             <div class="product-info">
-                <img src="/landingpage/landingpage_odin/img/benchh.png" alt="" width="150" height="150">
+                <img src="img/benchh.png" alt="" width="150" height="150">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
             </div>
             <div class="product-info">
-                <img src="/landingpage/landingpage_odin/img/deaddlift.webp" alt="" width="150" height="150">
+                <img src="img/deaddlift.webp" alt="" width="150" height="150">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, et.</p>
             </div>
         </div><!-- Ovdje zavrsava info-container -->
