--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="sign-up-container">
         <div class="sign-up">
             <div class="sign-up-text">
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, eius!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error optio quam tenetur amet nostrum doloremque! Animi consectetur voluptates incidunt qui.</p>
+                <h2>Lorem ipsum, dolor sit </h2>
+                <p>nostrum doloremque! Animi consectetur voluptates incidunt qui.</p>
             </div>
             <div class="sign-up-button">
                 <button>Sign up</button>
