finished footer few details left

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             </div>
         </div>
     </div><!-- Ovdje zavrsava sign up container -->
+    <!-- Footer -->
+    <div class="footer">
+        <p>Copyright &copy; Rino Zupa</p>
+        <br>
+        <p>Github: <a href="https://github.com/rinomeister?tab=repositories"> Rino</a></p>
+    </div><!-- Ovdje zavrsava Footer -->
     
     
 </body>
